k8s/email-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: email-server
  template:
    metadata:
      labels:
        app: email-server
    spec:
      containers:
      - name: email-server
        image: farhansajid2/email-service:13df99ac837b4c1f34b516efcecf8111705eb350
        ports:
        - containerPort: 8990
---
apiVersion: v1
kind: Service
metadata:
  name: email-service
spec:
  selector:
    app: email-server
  ports:
  - port: 8990
    targetPort: 8990
