k8s/micro.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro
spec:
  selector:
    matchLabels:
      app: micro
  template:
    metadata:
      labels:
        app: micro
    spec:
      containers:
      - name: micro
        image: microhq/micro
        args: 
          - "api"
          - "--handler=rpc"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: micro-service
spec:
  selector:
    app: micro
  ports:
  - port: 8080
    targetPort: 8080
