k8s/user.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: farhansajid2/user-service:13df99ac837b4c1f34b516efcecf8111705eb350
        ports:
        - containerPort: 8080
        command: ["./main", "--server_address=0.0.0.0:8080"]

---
apiVersion: v1
kind: Service
metadata:
  name: user-service-service
spec:
  selector:
    app: user-service
  ports:
  - port: 8080
    targetPort: 8080
